--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
 
       <button
         class="button save-button"
-        onclick="window['dialog-id'].showModal()"
+       onclick="window['dialog-id'].showModal()"
         aria-controls="dialog-id"
       >
         <svg
@@ -595,7 +595,7 @@
           </svg>
           <p class="dialog__text">Вставьте дискету, чтобы продолжить</p>
         </div>
-        <form>
+        <form method="dialog">
           <button
             class="button ok-button"
             onclick="window['dialog-id'].close()"
